welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: not found: value fonctionTest
		while (fonctionTest() == false) 
                       ^